# GraphMDO

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  benchmark.py  benchmark2.py  benchmark3.py  benchmark4.py  benchmark5.py  check_client_serialization.py  docker-compose.yml  fix_coverage.py  fix_file.py  fix_headers.py  fix_indent.py  fix_pyproject.py  fix_quotes.py  fix_refs.py  fix_test.py  gemseo_utilization_report.md  main.py  mkdocs.yml  patch.diff  patch.py  patch2.py  patch_ax_algo.py  patch_ax_settings.py  patch_ds.py  patch_factory.py  patch_lib.py  patch_moo.py  patch_optimizer.py  patch_pareto.py  patch_readme.py  patch_script.py  patch_seed.py  patch_test_opt.py  patch_test_opt2.py  (+6 more)
.github/workflows/: docs.yml  pypi-publish.yml  quality.yml  security.yml
docs/: index.md
docs/api/core/: components.md  surrogates.md  translator.md
docs/api/db/: client.md  graph_manager.md
docs/api/optimization/: optimizer.md
docs/dev-guide/: contributing.md
docs/technical-reference/: architecture.md  microservices.md
docs/user-guide/: installation.md  quick-start.md  running-optimization.md
mdo_framework/core/: surrogates.py  translator.py
mdo_framework/db/: graph_manager.py
mdo_framework/optimization/: optimizer.py
pytest10_out/reports/: inputs.html  n2.html
pytest2_out/reports/: inputs.html  n2.html
pytest3_out/reports/: inputs.html  n2.html
pytest4_out/reports/: inputs.html  n2.html
pytest5_out/reports/: inputs.html  n2.html
pytest6_out/reports/: inputs.html  n2.html
pytest7_out/reports/: inputs.html
pytest8_out/reports/: inputs.html  n2.html
services/execution/: main.py
src/mdo_framework/: __init__.py
src/mdo_framework/core/: components.py  components.py,cover  evaluators.py  evaluators.py,cover  surrogates.py  surrogates.py,cover  topology.py  topology.py,cover  translator.py  translator.py,cover
src/mdo_framework/db/: client.py  client.py,cover  graph_manager.py  graph_manager.py,cover
src/mdo_framework/optimization/: ax_algo_lib.py  ax_algo_lib.py,cover  optimizer.py  optimizer.py,cover  parameter_codec.py
src/services/execution/: main.py  main.py,cover  main.py.rej
src/services/graph/: main.py  main.py,cover
src/services/optimization/: main.py  main.py,cover
tests/: conftest.py  test_ax_algo_lib.py  test_components.py  test_db_client.py  test_graph_manager.py  test_integration.py  test_main.py  test_optimizer.py  test_parameter_codec.py  test_security_fix.py  test_services.py  test_services_opt.py  test_surrogates.py  test_topology.py  test_translator.py
