[project]
name = "graphmdo"
dynamic = ["version"]
description = "A dynamic, graph-driven Multidisciplinary Design Optimization (MDO) framework integrating FalkorDB, GEMSEO, and multi-fidelity surrogate models."
readme = "README.md"
authors = [
    { name = "jultou-raa", email = "64092886+jultou-raa@users.noreply.github.com" },
    { name = "google-labs-jules-bot", email = "161369871+google-labs-jules-bot@users.noreply.github.com" },
]
license = { text = "MPL-2.0" }
requires-python = ">=3.12"
dependencies = [
    "ax-platform>=1.2.3",
    "botorch>=0.17.0",
    "falkordb>=1.6.0",
    "fastapi>=0.133.1",
    "gemseo>=6.3.1 ; python_full_version < '3.14'",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "networkx<3.5",
    "numpy<2.4",
    "pymoo>=0.6.1.6",
    "scipy<1.15.2",
    "smt>=2.11.1",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.3",
    "mkdocstrings[python]>=1.0.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mdo_framework", "src/services"]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
omit = ["test/*", "tests/*", "**/__init__.py", "main.py"]

[tool.ruff.lint.per-file-ignores]
"src/mdo_framework/optimization/ax_algo_lib.py" = ["E402"]  # avoid futur warning